@@ -2,7 +2,7 @@ version: '3'
 
 services:
   hcd:
-    image: datastax/hcd:1.0.0-early-preview
+    image: datastax/hcd:1.0.0
     networks:
       - stargate
     mem_limit: 2G
@@ -22,7 +22,7 @@ services:
       retries: 20
 
   data-api:
-    image: stargateio/data-api:v1.0.12
+    image: stargateio/data-api:v1.0.15
     depends_on:
       hcd:
         condition: service_healthy
